traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:0: error: class Snake needs to be abstract, since method positionFinale is not defined
class Snake extends SimpleBuggle {
      ^