traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  
}


def positionFinale()